--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   </head>
   <body>
     What's good?
-    <script src="./index.js" type="text/javascript"></script>
-    <button id="connectButton" onclick="connect()">Connect</button>
-    <button id="fund" onclick="fund()">Fund</button>
+    <script src="./index.js" type="module"></script>
+    <button id="connectButton">Connect</button>
+    <button id="fund">Fund</button>
   </body>
 </html>
