--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
     <script src="./index.js" type="module"></script>
     <button id="connectButton">Connect</button>
     <button id="fund">Fund</button>
+    <label for="fund">ETH Amount</label>
+    <input id="ethAmount" placeholder="0.1" />
+    <button id="balanceButton">Get Balance</button>
+    <button id="withdrawButton">Withdraw</button>
   </body>
 </html>
